# invoice-app

./: Cargo.toml
crates/invoice-app/: Cargo.toml
crates/invoice-app/src/: lib.rs
crates/invoice-app/src/display/: client.rs  company.rs  config.rs  contact.rs  invoice.rs  items.rs  methods.rs  mod.rs  template.rs  terms.rs
crates/invoice-app/src/render/: mod.rs
crates/invoice-cli/: Cargo.toml
crates/invoice-cli/src/: lib.rs  main.rs
crates/invoice-core/: Cargo.toml
crates/invoice-core/src/: errors.rs  lib.rs
crates/invoice-core/src/display/: client.rs  company.rs  config.rs  contact.rs  currency.rs  ids.rs  invoice.rs  items.rs  methods.rs  mod.rs  quantity.rs  shortlist.rs  status.rs  summary.rs  template.rs  terms.rs
crates/invoice-core/src/models/: attributes.rs  client.rs  company.rs  config.rs  contact.rs  currency.rs  (+15 more)
crates/invoice-gui/: Cargo.toml
crates/invoice-gui/src/: main.rs
crates/invoice-storage/: Cargo.toml
crates/invoice-storage/migrations/sqlite/: 0001_initial.sql  0002_add_invoice_total.sql
crates/invoice-storage/src/db/: getters.rs  initdb.rs  mod.rs  prepare.rs
crates/invoice-storage/src/getters/: client.rs  company.rs  config.rs  invoice.rs  item.rs  method.rs  mod.rs  shortlist.rs  template.rs  terms.rs
crates/invoice-storage/src/sqlite/: mod.rs
crates/invoice-storage/src/sqlite/models/: invoice_skel.rs  mod.rs  template_skel.rs
crates/invoice-storage/src/sqlite/repos/: client_repo.rs  company_repo.rs  invoice_repo.rs  item_repo.rs  method_repo.rs  mod.rs  template_repo.rs  template_skel_repo.rs  terms_repo.rs
(+9 files in other folders)
