
[package]
name = "invoice-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "macros",
    "chrono",
    "rust_decimal"
]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
invoice-core = { path = "../invoice-core" }
