
[package]
name = "invoice-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "macros",
    "chrono",
    "rust_decimal",
    "migrate"
]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
chrono = "0.4.38"
async-trait = "0.1.89"
rust_decimal = "1.40.0"
invoice-core = { path = "../invoice-core" }
invoice-app = { path = "../invoice-app" }
